[package]
name = "shin-hentai"
default-run = "shin_hentai_bin"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "a simple comic viewer"
repository = "https://github.com/fakeshadow/shin-hentai"

[[bin]]
name = "shin_hentai_bin"
path = "src/main.rs"

[features]
wayland = ["eframe/wayland"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.24", default-features = false, features = ["default_fonts", "glow"] }
image = { version = "0.24.5", default-features = false, features = ["bmp", "hdr", "ico", "jpeg_rayon"] }
rfd = { version = "0.12" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zip = { version = "0.6.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1.7"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }

[build-dependencies]
resvg = { version = "0.36.0", default-features = false }
tiny-skia = { version = "0.11" }
usvg = { version = "0.36.0", default-features = false }

[profile.release]
lto = "thin"
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
