[package]
name = "shin-hentai"
default-run = "shin_hentai_bin"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "a simple comic viewer"
repository = "https://github.com/fakeshadow/shin-hentai"

[[bin]]
name = "shin_hentai_bin"
path = "src/main.rs"

[features]
wayland = ["eframe/wayland"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }
image = { version = "0.25" }
rfd = { version = "0.14" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zip = { version = "=2.1.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen-futures = "0.4.34"
zip = { version = "=2.1.3", default-features = false, features = ["deflate"] }

[build-dependencies]
resvg = { version = "0.37.0", default-features = false }
tiny-skia = { version = "0.11" }
usvg = { version = "0.37.0", default-features = false }

[profile.release]
lto = "thin"
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
