[package]
name = "shin-hentai"
default-run = "shin_hentai_bin"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "a simple comic viewer"
repository = "https://github.com/fakeshadow/shin-hentai"
rust-version = "1.88"

[[bin]]
name = "shin_hentai_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.33" }
image = { version = "0.25" }
rfd = { version = "0.15" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zip = { version = "6.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.70" 
zip = { version = "6.0", default-features = false, features = ["deflate"] }

[build-dependencies]
resvg = { version = "0.45.1", default-features = false }
tiny-skia = { version = "0.11" }
usvg = { version = "0.45.1", default-features = false }

[profile.release]
lto = "thin"
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
